[package]
name = "attractor-server"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "HTTP server for the attractor DOT-based AI pipeline runner"
license = "MIT"
repository = "https://github.com/bkrabach/attractor-server"
readme = "README.md"
keywords = ["pipeline", "server", "http", "ai", "llm"]
categories = ["development-tools", "web-programming::http-server"]

[[bin]]
name = "attractor-server"
path = "src/main.rs"

[lib]
name = "attractor_server"
path = "src/lib.rs"

[dependencies]
attractor          = { git = "https://github.com/bkrabach/attractor.git" }
axum               = { version = "0.8" }
tower              = { version = "0.5", features = ["util"] }
tower-http         = { version = "0.6", features = ["cors", "trace"] }
clap               = { version = "4", features = ["derive"] }
tokio              = { version = "1", features = ["rt-multi-thread", "macros", "time", "fs", "process", "io-util", "io-std"] }
tokio-stream       = { version = "0.1", features = ["sync"] }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid               = { version = "1", features = ["v4"] }
chrono             = { version = "0.4", features = ["serde"] }
thiserror          = "2"
async-trait        = "0.1"
futures            = "0.3"

[dev-dependencies]
tokio          = { version = "1", features = ["rt-multi-thread", "macros"] }
http-body-util = "0.1"
tempfile       = "3"
