[package]
name = "attractor-server"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "HTTP server for the attractor DOT-based AI pipeline runner"
license = "MIT"
repository = "https://github.com/bkrabach/attractor-server"
readme = "README.md"
keywords = ["pipeline", "server", "http", "ai", "llm"]
categories = ["development-tools", "web-programming::http-server"]

[[bin]]
name = "attractor-server"
path = "src/main.rs"

[lib]
name = "attractor_server"
path = "src/lib.rs"

[dependencies]
tokio        = { version = "1",    features = ["rt-multi-thread", "macros", "time", "fs", "process", "io-util", "io-std"] }
reqwest      = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
serde        = { version = "1",    features = ["derive"] }
serde_json   = "1"
async-trait  = "0.1"
futures      = "0.3"
thiserror    = "2"
chrono       = { version = "0.4", features = ["serde"] }
base64       = "0.22"
uuid         = { version = "1", features = ["v4"] }
tracing      = "0.1"
rand         = "0.9"
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util   = { version = "0.7" }
nom          = "8"
indexmap     = { version = "2", features = ["serde"] }
globset      = "0.4"
tempfile     = "3"
regex        = "1"
sha2         = "0.10"
axum         = { version = "0.8" }
tower        = { version = "0.5", features = ["util"] }
tower-http   = { version = "0.6", features = ["cors", "trace"] }
clap         = { version = "4",   features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
http-body-util     = "0.1"

# Local dependencies (will need to be path or version depending on deployment)
attractor         = { path = "../attractor", version = "0.1.0" }
unified-llm       = { path = "../unified-llm", version = "0.1.0" }

[dev-dependencies]
tokio          = { version = "1", features = ["rt-multi-thread", "macros"] }
http-body-util = "0.1"
tempfile       = "3"
